--- a/index.html
+++ b/index.html
@@ -15,31 +15,33 @@
 	<header class="header">
 		<div class="container">
 			<div class="header-top">
-				<a href="#" class="logo">
+				<a class="logo header__logo" href="#">
 					<img class="logo__img" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
 				</a>
+				<form class="search header__search" action="#">
+					<input class="search__input" type="text" placeholder="Search Location">
+					<button class="search__button">
+						<img src="img/search.svg" alt="icon: search">
+					</button>
+				</form>
+				<a class="user" href="#">
+					<div class="user__avatar">
+						<img class="user__img" src="img/user.jpg" alt="avatar: Nathan">
+					</div>
+					<span class="user__name">Nathan</span>
+				</a>
 			</div>
-			<form action="#" class="search">
-				<input class="search__input" type="text" placeholder="Search Location">
-				<button class="search__button">
-					<img src="img/search.svg" alt="icon: search">
-				</button>
-			</form>
-			<a class="user" href="#">
-				<img src="img/user.jpg" alt="avatar: Nathan" class="user__avatar">
-				<span class="user__name">Nathan</span>
-			</a>
 			<!-- /.header-top -->
+			<ul class="header-menu">
+				<li class="header-menu__item"><a href="#" class="header-menu__link">All Deals</a></li>
+				<li class="header-menu__item"><a href="#" class="header-menu__link">Hotels</a></li>
+				<li class="header-menu__item"><a href="#" class="header-menu__link">Activities</a></li>
+				<li class="header-menu__item"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
+				<li class="header-menu__item"><a href="#" class="header-menu__link">Restaurants</a></li>
+				<li class="header-menu__item"><a href="#" class="header-menu__link">Events</a></li>
+				<li class="header-menu__item"><a href="#" class="header-menu__link">Rodrigues</a></li>
+			</ul>
 		</div>
-		<ul class="header-menu">
-			<li class="header-menu__item"><a href="#" class="header-menu__link">All Deals</a></li>
-			<li class="header-menu__item"><a href="#" class="header-menu__link">Hotels</a></li>
-			<li class="header-menu__item"><a href="#" class="header-menu__link">Activities</a></li>
-			<li class="header-menu__item"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
-			<li class="header-menu__item"><a href="#" class="header-menu__link">Restaurants</a></li>
-			<li class="header-menu__item"><a href="#" class="header-menu__link">Events</a></li>
-			<li class="header-menu__item"><a href="#" class="header-menu__link">Rodrigues</a></li>
-		</ul>
 		<!-- /.container -->
 	</header>
 	<!-- /.header -->
