--- a/index.html
+++ b/index.html
@@ -31,18 +31,25 @@
 					<span class="user__name">Nathan</span>
 				</a>
 			</div>
-			<!-- /.header-top -->
-			<ul class="header-menu">
-				<li class="header-menu__item"><a href="#" class="header-menu__link">All Deals</a></li>
-				<li class="header-menu__item"><a href="#" class="header-menu__link">Hotels</a></li>
-				<li class="header-menu__item"><a href="#" class="header-menu__link">Activities</a></li>
-				<li class="header-menu__item"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
-				<li class="header-menu__item"><a href="#" class="header-menu__link">Restaurants</a></li>
-				<li class="header-menu__item"><a href="#" class="header-menu__link">Events</a></li>
-				<li class="header-menu__item"><a href="#" class="header-menu__link">Rodrigues</a></li>
-			</ul>
 		</div>
 		<!-- /.container -->
+		<!-- /.header-top -->
+		<div class="header-bottom">
+			<div class="container">
+				<ul class="header-menu">
+					<li class="header-menu__item"><a href="#" class="header-menu__link">All Deals</a></li>
+					<li class="header-menu__item"><a href="#" class="header-menu__link">Hotels</a></li>
+					<li class="header-menu__item"><a href="#" class="header-menu__link">Activities</a></li>
+					<li class="header-menu__item"><a href="#" class="header-menu__link">Hotel Day Packages</a></li>
+					<li class="header-menu__item"><a href="#" class="header-menu__link">Restaurants</a></li>
+					<li class="header-menu__item"><a href="#" class="header-menu__link">Events</a></li>
+					<li class="header-menu__item"><a href="#" class="header-menu__link">Rodrigues</a></li>
+				</ul>
+			</div>
+			<!-- /.container -->
+		</div>
+
+
 	</header>
 	<!-- /.header -->
 </body>
