made adaptive for the header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<img class="logo__img" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
 					</a>
 					<!-- /.logo -->
-					<form class="search navbar__search" action="#">
+					<form class="search navbar-top__search" action="#">
 						<input class="search__input" type="text" placeholder="Search Location">
 						<button class="search__button">
 							<img src="img/search.svg" alt="icon: search">
@@ -34,9 +34,9 @@
 						<span class="user__name">Nathan</span>
 					</a>
 					<!-- /.user -->
-					<div class="menu-burger">
+					<button class="menu-burger">
 						<span class="menu-burger__line"></span>
-					</div>
+					</button>
 					<!-- /.burger -->
 				</div>
 			</div>
