added breadcrumb and made a part of hotel section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,53 @@
 		<!-- /.navbar-bottom -->
 	</header>
 	<!-- /.navbar -->
+	<nav class="breadcrumb">
+		<div class="container">
+			<ul class="breadcrumb-list">
+				<li class="breadcrumb-list__item">
+					<a href="#" class="breadcrumb-list__link">Home</a>
+				</li>
+				<li class="breadcrumb-list__item">
+					<a href="#" class="breadcrumb-list__link">Flash Offers</a>
+				</li>
+				<li class="breadcrumb-list__item">
+					Grand Hilton Hotel
+				</li>
+			</ul>
+		</div>
+		<!-- /.container -->
+	</nav>
+	<!-- /.breadcrumb -->
+	<section class="hotel">
+		<div class="container">
+			<div class="hotel-wrapper">
+				<div class="hotel-text">
+					<div class="hotel-text__wrap">
+						<div class="hotel-text__stars hotel-stars">
+							<img src="img/Star.svg" alt="">
+							<img src="img/Star.svg" alt="">
+							<img src="img/Star.svg" alt="">
+							<img src="img/Star.svg" alt="">
+							<img src="img/Star.svg" alt="">
+						</div>
+						<h1 class="hotel-text__title hotel-name">Grand hilton hotel</h1>
+						<span class="hotel-text__offer">Flash Offer</span>
+					</div>
+					<!-- /.hotel-text__wrap -->
+					<p class="hotel-text__desc">Half-Board / All Inclusive + Complimentary Activities + Child Stays Free
+					</p>
+				</div>
+				<div class="hotel-rating">
+					<span class="hotel-rating__text">User Rattings</span>
+					<span class="hotel-rating__evaluation">4.5/5</span>
+				</div>
+				<!-- /.hotel-rating -->
+			</div>
+		</div>
+		<!-- /.container -->
+	</section>
+	<!-- /.hotel -->
+
 </body>
 
 </html>
