--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>tour plan</title>
+	<link rel="stylesheet" href="css/swiper-bundle.min.css">
 	<link
 		href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;600;700&family=Nunito:wght@400;800&display=swap"
 		rel="stylesheet">
@@ -103,11 +104,34 @@
 				</div>
 				<!-- /.hotel-rating -->
 			</div>
+			<div class="hotel-grid">
+				<div class="slider">
+					<!-- Slider main container -->
+					<div class="swiper-container">
+						<!-- Additional required wrapper -->
+						<div class="swiper-wrapper">
+							<!-- Slides -->
+							<div class="swiper-slide"><img class="slider__img" src="img/slide.jpg" alt="slide"></div>
+							<div class="swiper-slide"><img class="slider__img" src="img/slide-1.jpg" alt="slide"></div>
+							<div class="swiper-slide"><img class="slider__img" src="img/slide-2.jpg" alt="slide"></div>
+							<div class="swiper-slide"><img class="slider__img" src="img/slide-3.jpg" alt="slide"></div>
+							<div class="swiper-slide"><img class="slider__img" src="img/slide-4.jpg" alt="slide"></div>
+						</div>
+						<!-- If we need navigation buttons -->
+						<button class="slider-button slider-button--prev"></button>
+						<button class="slider-button slider-button--next"></button>
+					</div>
+					<!-- Slider main container -->
+				</div>
+				<!-- /.slider -->
+			</div>
+			<!-- /.hotel-grid -->
 		</div>
 		<!-- /.container -->
 	</section>
 	<!-- /.hotel -->
-
+	<script src="js/swiper-bundle.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
