--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<!-- /.logo -->
 					<form class="search navbar-top__search" action="#">
 						<input class="search__input" type="text" placeholder="Search Location">
-						<button class="search__button">
+						<button class="search__button button">
 							<img src="img/search.svg" alt="icon: search">
 						</button>
 					</form>
@@ -124,7 +124,46 @@
 					<!-- Slider main container -->
 				</div>
 				<!-- /.slider -->
+				<div class="hotel-right">
+					<div class="booking">
+						<div class="booking__info">
+							<div class="booking__price price">
+								<span class="price__start">price starts as</span>
+								<strong class="price__pricetag">$ 8,500</strong>
+								<span class="price__per-room">per room / night</span>
+							</div>
+							<!-- /.price -->
+							<div class="booking__person-room person-room">
+								<div class="person-room__text">
+									<img class="person-room__icon" src="img/user.svg" alt="icon: user">
+									<span class="person-room__desc">2 x Guests</span>
+								</div>
+								<div class="person-room__text">
+									<img class="person-room__icon" src="img/home.svg" alt="icon: home">
+									<span class="person-room__desc">1 x Room</span>
+								</div>
+							</div>
+							<!-- /.person-room -->
+						</div>
+						<div class="booking__call-center call-center">
+							<span class="call-center__text">Quick Booking</span>
+							<a href="tel:12100" class="call-center__number">
+								<img class="call-center__icon" src="img/phone-call.svg" alt="icon: phone-call">
+								<span class="call-center__numb">12100</span>
+							</a>
+						</div>
+						<!-- /.booking__call-center -->
+						<button class="button booking-button">View Other Options</button>
+						<!-- /.booking__info -->
+					</div>
+					<!-- /.booking -->
+					<div class="map">
+
+					</div>
+					<!-- /.map -->
+				</div>
 			</div>
+			<!-- /.hotel-right -->
 			<!-- /.hotel-grid -->
 		</div>
 		<!-- /.container -->
