--- a/index.html
+++ b/index.html
@@ -157,9 +157,7 @@
 						<!-- /.booking__info -->
 					</div>
 					<!-- /.booking -->
-					<div class="map">
-
-					</div>
+					<div id="map" class="map" style="width: 347px; height: 213px"></div>
 					<!-- /.map -->
 				</div>
 			</div>
@@ -170,6 +168,10 @@
 	</section>
 	<!-- /.hotel -->
 	<script src="js/swiper-bundle.min.js"></script>
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=9313937c-2bc8-480f-b9ac-7970f5ed1c87&lang=en_US"
+		type="text/javascript">
+	</script>
+	<script src="js/map.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
