added adaptive for hotel-grid

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<!-- /.hotel-rating -->
 			</div>
 			<div class="hotel-grid">
-				<div class="slider">
+				<div class="slider hotel__slider">
 					<!-- Slider main container -->
 					<div class="swiper-container">
 						<!-- Additional required wrapper -->
@@ -157,7 +157,7 @@
 						<!-- /.booking__info -->
 					</div>
 					<!-- /.booking -->
-					<div id="map" class="map" style="width: 347px; height: 213px"></div>
+					<div id="map" class="map hotel-map"></div>
 					<!-- /.map -->
 				</div>
 			</div>
