fixed error in html: deleted type=text in <script>

--- a/index.html
+++ b/index.html
@@ -168,8 +168,7 @@
 	</section>
 	<!-- /.hotel -->
 	<script src="js/swiper-bundle.min.js"></script>
-	<script src="https://api-maps.yandex.ru/2.1/?apikey=9313937c-2bc8-480f-b9ac-7970f5ed1c87&lang=en_US"
-		type="text/javascript">
+	<script src="https://api-maps.yandex.ru/2.1/?apikey=9313937c-2bc8-480f-b9ac-7970f5ed1c87&lang=en_US">
 	</script>
 	<script src="js/map.js"></script>
 	<script src="js/main.js"></script>
