created newsletter section, and its responsive

--- a/index.html
+++ b/index.html
@@ -167,6 +167,22 @@
 		<!-- /.container -->
 	</section>
 	<!-- /.hotel -->
+	<section class="newsletter">
+		<div class="newsletter-wrapper">
+			<h2 class="newsletter-title">
+				subscribe to our
+				<span class="newsletter-title__strong">Newsletter</span>
+			</h2>
+			<form class="subscribe newsletter__subscribe" action="#">
+				<input class="subscribe__input" type="text" placeholder="Your email address">
+				<button class="subscribe__button button">
+					send
+				</button>
+			</form>
+		</div>
+		<!-- /.newsletter-wrapper -->
+	</section>
+	<!-- /.newsletter -->
 	<script src="js/swiper-bundle.min.js"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=9313937c-2bc8-480f-b9ac-7970f5ed1c87&lang=en_US">
 	</script>
