added parallax-effect to newsletter section

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		<!-- /.container -->
 	</section>
 	<!-- /.hotel -->
-	<section class="newsletter">
+	<section class="newsletter parallax-window" data-parallax="scroll" data-image-src="img/newsletter-bg.jpg">
 		<div class="newsletter-wrapper">
 			<h2 class="newsletter-title">
 				subscribe to our
@@ -184,9 +184,15 @@
 	</section>
 	<!-- /.newsletter -->
 	<script src="js/swiper-bundle.min.js"></script>
+	<!--Подключение слайдера-->
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=9313937c-2bc8-480f-b9ac-7970f5ed1c87&lang=en_US">
 	</script>
 	<script src="js/map.js"></script>
+	<!--Подключение яндекс карты-->
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/parallax.min.js"></script>
+	<script src="js/parallax.js"></script>
+	<!--Параллакс эффект-->
 	<script src="js/main.js"></script>
 </body>
 
