created activities section, its adaptive

--- a/index.html
+++ b/index.html
@@ -233,6 +233,60 @@
 	</section>
 	<!-- /.reviews -->
 
+	<section class="activities">
+		<div class="container">
+			<h2 class="activities__title">Other Activities</h2>
+			<div class="activities-block">
+
+				<div class="activities-block__item activities-card">
+					<div class="activities-card__bg"><img src="img/activity-bg-1.jpg" alt="activity" class="activities-card__img">
+					</div>
+					<div class="activities-card__text">
+						<h3 class="activities-card__title">The curious corner
+							of chamarel</h3>
+						<button class="activities-card__button button">Book Now</button>
+					</div>
+				</div>
+
+				<div class="activities-block__item activities-card">
+					<div class="activities-card__bg"><img src="img/activity-bg-2.jpg" alt="activity" class="activities-card__img">
+					</div>
+					<div class="activities-card__text">
+						<h3 class="activities-card__title">Gymkhana club golf
+							course</h3>
+						<button class="activities-card__button button">Book Now</button>
+					</div>
+				</div>
+
+				<div class="activities-block__item activities-card">
+					<div class="activities-card__bg"><img src="img/activity-bg-3.jpg" alt="activity" class="activities-card__img">
+					</div>
+					<div class="activities-card__text">
+						<h3 class="activities-card__title">Tamarind falls hiking
+							trip - full day
+						</h3>
+						<button class="activities-card__button button">Book Now</button>
+					</div>
+				</div>
+
+				<div class="activities-block__item activities-card">
+					<div class="activities-card__bg"><img src="img/activity-bg-4.jpg" alt="activity" class="activities-card__img">
+					</div>
+					<div class="activities-card__text">
+						<h3 class="activities-card__title">The blue marine discovery
+							quest</h3>
+						<button class="activities-card__button button">Book Now</button>
+					</div>
+				</div>
+
+				<!-- /.activities-cards__item -->
+			</div>
+			<!-- /.activities-cards -->
+		</div>
+		<!-- /.container -->
+	</section>
+	<!-- /.activities -->
+
 
 	<script src="js/swiper-bundle.min.js"></script>
 	<!--Подключение слайдера-->
