created packages section using CSS Grid

--- a/index.html
+++ b/index.html
@@ -171,25 +171,25 @@
 			<h2 class="packages__title">Other Packages</h2>
 			<div class="packages-cards">
 
-				<div class="packages-cards__item package-card biggest-card">
-					<div class="biggest-card__bg">
-						<img src="img/packages-bg-1.jpg" alt="hotel image" class="biggest-card__img">
+				<div class="packages-cards__item package-card">
+					<div class="package-card__bg">
+						<img src="img/packages-bg-1.jpg" alt="hotel-img" class="package-card__img">
 					</div>
-					<div class="biggest-card__info">
-						<div class="package-card__rating biggest-card__rating">
+					<div class="package-card__info">
+						<div class="package-card__rating">
 							<img src="img/Star.svg" alt="">
 							<img src="img/Star.svg" alt="">
 							<img src="img/Star.svg" alt="">
 							<img src="img/Star.svg" alt="">
 							<img src="img/Star.svg" alt="">
 						</div>
-						<h3 class="package-card__title biggest-card__title">Hotel Blue Haven</h3>
-						<p class="package-card__text biggest-card__text">Aute quis duis excepteur excepteur ipsum cat eiusmod
+						<h3 class="package-card__title">Hotel Blue Haven</h3>
+						<p class="package-card__text">Aute quis duis excepteur excepteur ipsum cat eiusmod
 							consectetur enim laborum
 							magna llit. Ipsum est fugiat velit ea llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur
 							excepteur ipsum occaecat eiusmod nsectetur enim laborum magna mollit. Ipsum est fugiat velit ea ullamco do
 						</p>
-						<div class="package-card__features package-features biggest-card__features">
+						<div class="package-card__features package-features">
 							<div class="package-features__text">
 								<img class="package-features__icon" src="img/geo-icon.svg" alt="icon: location">
 								<span class="package-features__desc">1749 Wheeler Ridge Delaware</span>
@@ -203,7 +203,7 @@
 								<span class="package-features__desc">1 x Room</span>
 							</div>
 						</div>
-						<div class="package-card__book package-book biggest-card__book">
+						<div class="package-card__book package-book">
 							<div class="package-book__price">
 								<span class="package-book__old-price">$ 10,500</span>
 								<span class="package-book__new-price"> $ 8,500</span>
@@ -216,7 +216,37 @@
 
 				<div class="packages-cards__item package-card">
 					<div class="package-card__bg">
-						<img src="img/packages-bg-1.jpg" alt="hotel image" class="package-card__img">
+						<img src="img/packages-bg-2.jpg" alt="hotel-img" class="package-card__img">
+					</div>
+					<div class="package-card__info">
+						<h3 class="package-card__title">Hotel Blue Haven</h3>
+						<div class="package-card__features package-features">
+							<div class="package-features__text">
+								<img class="package-features__icon" src="img/geo-icon.svg" alt="icon: location">
+								<span class="package-features__desc">1749 Wheeler Ridge Delaware</span>
+							</div>
+							<div class="package-features__text">
+								<img class="package-features__icon" src="img/user.svg" alt="icon: location">
+								<span class="package-features__desc">2 x Guests</span>
+							</div>
+							<div class="package-features__text">
+								<img class="package-features__icon" src="img/home.svg" alt="icon: location">
+								<span class="package-features__desc">1 x Room</span>
+							</div>
+						</div>
+						<div class="package-card__book package-book">
+							<div class="package-book__price">
+								<span class="package-book__old-price">$ 10,500</span>
+								<span class="package-book__new-price"> $ 8,500</span>
+							</div>
+							<button class="package-book__button button">Book Now</button>
+						</div>
+					</div>
+				</div>
+
+				<div class="packages-cards__item package-card">
+					<div class="package-card__bg">
+						<img src="img/packages-bg-3.jpg" alt="hotel-img" class="package-card__img">
 					</div>
 					<div class="package-card__info">
 						<h3 class="package-card__title">Hotel Blue Haven</h3>
@@ -245,7 +275,7 @@
 				</div>
 				<div class="packages-cards__item package-card">
 					<div class="package-card__bg">
-						<img src="img/packages-bg-1.jpg" alt="hotel image" class="package-card__img">
+						<img src="img/packages-bg-4.jpg" alt="hotel-img" class="package-card__img">
 					</div>
 					<div class="package-card__info">
 						<h3 class="package-card__title">Hotel Blue Haven</h3>
@@ -274,36 +304,7 @@
 				</div>
 				<div class="packages-cards__item package-card">
 					<div class="package-card__bg">
-						<img src="img/packages-bg-1.jpg" alt="hotel image" class="package-card__img">
-					</div>
-					<div class="package-card__info">
-						<h3 class="package-card__title">Hotel Blue Haven</h3>
-						<div class="package-card__features package-features">
-							<div class="package-features__text">
-								<img class="package-features__icon" src="img/geo-icon.svg" alt="icon: location">
-								<span class="package-features__desc">1749 Wheeler Ridge Delaware</span>
-							</div>
-							<div class="package-features__text">
-								<img class="package-features__icon" src="img/user.svg" alt="icon: location">
-								<span class="package-features__desc">2 x Guests</span>
-							</div>
-							<div class="package-features__text">
-								<img class="package-features__icon" src="img/home.svg" alt="icon: location">
-								<span class="package-features__desc">1 x Room</span>
-							</div>
-						</div>
-						<div class="package-card__book package-book">
-							<div class="package-book__price">
-								<span class="package-book__old-price">$ 10,500</span>
-								<span class="package-book__new-price"> $ 8,500</span>
-							</div>
-							<button class="package-book__button button">Book Now</button>
-						</div>
-					</div>
-				</div>
-				<div class="packages-cards__item package-card">
-					<div class="package-card__bg">
-						<img src="img/packages-bg-1.jpg" alt="hotel image" class="package-card__img">
+						<img src="img/packages-bg-5.jpg" alt="hotel-img" class="package-card__img">
 					</div>
 					<div class="package-card__info">
 						<h3 class="package-card__title">Hotel Blue Haven</h3>
