--- a/index.html
+++ b/index.html
@@ -460,6 +460,115 @@
 	</section>
 	<!-- /.activities -->
 
+	<footer class="footer">
+		<div class="container">
+			<div class="footer-wrapper">
+				<img class="logo footer__logo" src="img/logo-vertical.svg" alt="logo: best tour plan">
+
+				<div class="footer__list footer__catigories">
+					<h3 class="footer__title">All categories</h3>
+					<ul class="footer__ul">
+						<li class="footer__item"><a href="#" class="footer__link">All Deals</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Hotels</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Activities</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Spa Packages</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Hotel Day Packages</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Restaurants</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Fitness</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Rodrigues</a></li>
+					</ul>
+					<!-- /.footer__ul -->
+				</div>
+				<!-- /.footer__list -->
+
+				<div class="footer__list footer__additional">
+					<h3 class="footer__title">Additional information</h3>
+					<ul class="footer__ul">
+						<li class="footer__item"><a href="#" class="footer__link">About Us</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">How does it work?</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Frequently Asked Questions</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Deals.mu loyalty program</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Promote your Business on BTP</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Fitness</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Rodrigues</a></li>
+					</ul>
+					<!-- /.footer__ul -->
+				</div>
+				<!-- /.footer__list -->
+
+				<div class="footer__social-network">
+					<h3 class="footer__title footer__title--inline">Social Network</h3>
+					<div class="footer__social-links">
+						<a href="#" class="footer__link"><img src="img/facebook.svg" alt="icon: facebook"></a>
+						<a href="#" class="footer__link"><img src="img/youtube.svg" alt="icon: youtube"></a>
+						<a href="#" class="footer__link"><img src="img/instagram.svg" alt="icon: instagram"></a>
+					</div>
+					<!-- /.footer__social-links -->
+				</div>
+				<!-- /.footer__social-network -->
+
+				<div class="footer__list footer__legal">
+					<h3 class="footer__title">Legal information</h3>
+					<ul class="footer__ul">
+						<li class="footer__item"><a href="#" class="footer__link">Terms & Conditions</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Disclaimer</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Cancellation policy</a></li>
+						<li class="footer__item"><a href="#" class="footer__link">Privacy</a></li>
+					</ul>
+					<!-- /.footer__ul -->
+				</div>
+				<!-- /.footer__list -->
+
+				<div class="footer__contact-details">
+					<h3 class="footer__title footer__title--mb-3">Contact details</h3>
+					<p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
+					<ul class="footer__ul">
+						<li class="footer__item footer__item--mb-2">
+							<div class="footer__icon-wrapper">
+								<img class="footer__icon" src="img/map.svg" alt="icon: map">
+							</div>
+							9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United States
+						</li>
+						<li class="footer__item footer__item--mb-2">
+							<div class="footer__icon-wrapper">
+								<img class="footer__icon" src="img/phone.svg" alt="icon: phone">
+							</div>
+							Tel (business hours) : 269 1500 <br>
+							Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm) <br>
+							Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+						</li>
+						<li class="footer__item footer__item--mb-2">
+							<div class="footer__icon-wrapper">
+								<img class="footer__icon" src="img/mail.svg" alt="icon: mail">
+							</div>
+							cherly.lawson@example.com
+						</li>
+					</ul>
+				</div>
+				<!-- /.footer__contact-details -->
+
+				<div class="footer__contact-form">
+					<h3 class="footer__title">Send us a message</h3>
+					<form action="#" class="footer__form">
+						<input class="input footer__input" type="text" placeholder="Your Full Name*">
+						<input class="input footer__input" type="text" placeholder="Phone Number*">
+						<textarea class="footer__message" cols="30" rows="10" placeholder="Message"></textarea>
+						<!-- /#.footer__message -->
+						<button class="footer__button button" type="submit">Send</button>
+						<!-- /.footer__button button -->
+						<span class="footer__info">* Required Fields</span>
+					</form>
+					<!-- /.footer__form -->
+				</div>
+				<!-- /.footer__contacts-form -->
+			</div>
+			<!-- /.footer-wrapper -->
+		</div>
+		<!-- /.container -->
+	</footer>
+	<!-- /.footer -->
+
 
 	<script src="js/swiper-bundle.min.js"></script>
 	<!--Подключение слайдера-->
