added adaptive for footer

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 			<div class="footer-wrapper">
 				<img class="logo footer__logo" src="img/logo-vertical.svg" alt="logo: best tour plan">
 
-				<div class="footer__list footer__catigories">
+				<div class="footer__list footer__categories">
 					<h3 class="footer__title">All categories</h3>
 					<ul class="footer__ul">
 						<li class="footer__item"><a href="#" class="footer__link">All Deals</a></li>
@@ -564,6 +564,18 @@
 				<!-- /.footer__contacts-form -->
 			</div>
 			<!-- /.footer-wrapper -->
+			<div class="footer-bottom">
+				<div class="footer-bottom__wrapper">
+					<div class="footer-bottom__links">
+						<a href="#" class="footer-bottom__link">Disclaimer</a>
+						<a href="#" class="footer-bottom__link">Conditions of use </a>
+						<a href="#" class="footer-bottom__link">Cancellation policy</a>
+					</div>
+					<div class="footer-bottom__credit-cards">
+						<img src="img/credit-cards.png" alt="Credit cards" class="footer-bottom__img">
+					</div>
+				</div>
+			</div>
 		</div>
 		<!-- /.container -->
 	</footer>
