--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<header class="navbar">
+	<header class="navbar navbar--mobile--fixed">
 		<div class="navbar-top">
 			<div class="container">
 				<div class="navbar-top__content">
@@ -21,14 +21,14 @@
 						<img class="logo__img" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
 					</a>
 					<!-- /.logo -->
-					<form class="search navbar-top__search" action="#">
+					<form class="search navbar-top__search navbar-top__search--mobile--hidden" action="#">
 						<input class="search__input" type="text" placeholder="Search Location">
 						<button class="search__button button">
 							<img src="img/search.svg" alt="icon: search">
 						</button>
 					</form>
 					<!-- /.search -->
-					<a class="user" href="#">
+					<a class="user navbar-top__user navbar-top__user--mobile--hidden" href="#">
 						<div class="user__avatar">
 							<img class="user__img" src="img/user.jpg" alt="avatar: Nathan">
 						</div>
@@ -47,6 +47,24 @@
 		<div class="navbar-bottom">
 			<div class="container">
 				<ul class="navbar-menu">
+					<li class="navbar-menu__item navbar-menu__item--mobile--visible">
+						<a class="user navbar-top__user navbar-top__user--mobile--visible" href="#">
+							<div class="user__avatar">
+								<img class="user__img" src="img/user.jpg" alt="avatar: Nathan">
+							</div>
+							<span class="user__name user__name--light">Nathan</span>
+						</a>
+						<!-- /.user -->
+					</li>
+					<li class="navbar-menu__item navbar-menu__item--mobile--visible">
+						<form class="search navbar-top__search navbar-top__search--mobile--visible" action="#">
+							<input class="search__input search__input--mobile" type="text" placeholder="Search Location">
+							<button class="search__button button">
+								<img src="img/search.svg" alt="icon: search">
+							</button>
+						</form>
+						<!-- /.search -->
+					</li>
 					<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">All Deals</a></li>
 					<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Hotels</a></li>
 					<li class="navbar-menu__item"><a href="#" class="navbar-menu__link">Activities</a></li>
