fixed BEM errors

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 						<img class="logo__img" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
 					</a>
 					<!-- /.logo -->
-					<form class="search navbar-top__search navbar-top__search--mobile--hidden" action="#">
+					<form class="search navbar__search navbar__search--mobile--hidden" action="#">
 						<input class="search__input" type="text" placeholder="Search Location">
 						<button class="search__button button">
 							<img src="img/search.svg" alt="icon: search">
 						</button>
 					</form>
 					<!-- /.search -->
-					<a class="user navbar-top__user navbar-top__user--mobile--hidden" href="#">
+					<a class="user navbar__user navbar__user--mobile--hidden" href="#">
 						<div class="user__avatar">
 							<img class="user__img" src="img/user.jpg" alt="avatar: Nathan">
 						</div>
@@ -48,7 +48,7 @@
 			<div class="container">
 				<ul class="navbar-menu">
 					<li class="navbar-menu__item navbar-menu__item--mobile--visible">
-						<a class="user navbar-top__user navbar-top__user--mobile--visible" href="#">
+						<a class="user navbar__user navbar__user--mobile--visible" href="#">
 							<div class="user__avatar">
 								<img class="user__img" src="img/user.jpg" alt="avatar: Nathan">
 							</div>
@@ -57,7 +57,7 @@
 						<!-- /.user -->
 					</li>
 					<li class="navbar-menu__item navbar-menu__item--mobile--visible">
-						<form class="search navbar-top__search navbar-top__search--mobile--visible" action="#">
+						<form class="search navbar__search navbar__search--mobile--visible" action="#">
 							<input class="search__input search__input--mobile" type="text" placeholder="Search Location">
 							<button class="search__button button">
 								<img src="img/search.svg" alt="icon: search">
