--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
 				subscribe to our
 				<span class="newsletter-title__strong">Newsletter</span>
 			</h2>
-			<form class="subscribe newsletter__subscribe" action="#">
-				<input class="subscribe__input" type="text" placeholder="Your email address">
+			<form class="subscribe newsletter__subscribe" action="send.php" method="POST">
+				<input class="subscribe__input" type="text" placeholder="Your email address" name="email">
 				<button class="subscribe__button button">
 					send
 				</button>
@@ -568,10 +568,10 @@
 
 				<div class="footer__contact-form">
 					<h3 class="footer__title">Send us a message</h3>
-					<form action="#" class="footer__form">
-						<input class="input footer__input" type="text" placeholder="Your Full Name*">
-						<input class="input footer__input" type="text" placeholder="Phone Number*">
-						<textarea class="footer__message" cols="30" rows="10" placeholder="Message"></textarea>
+					<form action="send.php" method="POST" class="footer__form">
+						<input class="input footer__input" type="text" placeholder="Your Full Name*" name="name">
+						<input class="input footer__input" type="text" placeholder="Phone Number*" name="phone">
+						<textarea class="footer__message" placeholder="Message" name="message"></textarea>
 						<!-- /#.footer__message -->
 						<button class="footer__button button" type="submit">Send</button>
 						<!-- /.footer__button button -->
@@ -598,6 +598,19 @@
 		<!-- /.container -->
 	</footer>
 	<!-- /.footer -->
+	<div class="modal">
+		<div class="modal__overlay"></div>
+		<!-- /.modal__overlay -->
+		<div class="modal__dialog">
+			<a href="" class="modal__close">
+				<img src="img/close.svg" alt="Icon: close">
+			</a>
+			<!-- /.modal__close -->
+		</div>
+		<!-- /.modal__dialog -->
+	</div>
+	<!-- /.modal -->
+
 
 
 	<script src="js/swiper-bundle.min.js"></script>
