--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;600;700&family=Nunito:wght@400;800&display=swap"
 		rel="stylesheet">
+	<link rel="stylesheet" href="css/aos.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +18,7 @@
 		<div class="navbar-top">
 			<div class="container">
 				<div class="navbar-top__content">
-					<a class="logo" href="#">
+					<a class="logo" href="#" data-aos="zoom-in-up" data-aos-delay="100" data-aos-duration="1000">
 						<img class="logo__img" src="img/logo-gorizontal.svg" alt="logo: Best Tour Plan">
 					</a>
 					<!-- /.logo -->
@@ -189,7 +190,7 @@
 	<section class="packages">
 		<div class="container">
 			<h2 class="packages__title">Other Packages</h2>
-			<div class="packages-cards">
+			<div class="packages-cards" data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000">
 
 				<div class="packages-cards__item package-card">
 					<div class="package-card__bg">
@@ -429,7 +430,8 @@
 			<h2 class="activities__title">Other Activities</h2>
 			<div class="activities-block">
 
-				<div class="activities-block__item activities-card">
+				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+					data-aos-delay="100">
 					<div class="activities-card__bg"><img src="img/activity-bg-1.jpg" alt="activity" class="activities-card__img">
 					</div>
 					<div class="activities-card__text">
@@ -439,7 +441,8 @@
 					</div>
 				</div>
 
-				<div class="activities-block__item activities-card">
+				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+					data-aos-delay="200">
 					<div class="activities-card__bg"><img src="img/activity-bg-2.jpg" alt="activity" class="activities-card__img">
 					</div>
 					<div class="activities-card__text">
@@ -449,7 +452,8 @@
 					</div>
 				</div>
 
-				<div class="activities-block__item activities-card">
+				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+					data-aos-delay="300">
 					<div class="activities-card__bg"><img src="img/activity-bg-3.jpg" alt="activity" class="activities-card__img">
 					</div>
 					<div class="activities-card__text">
@@ -460,7 +464,8 @@
 					</div>
 				</div>
 
-				<div class="activities-block__item activities-card">
+				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+					data-aos-delay="400">
 					<div class="activities-card__bg"><img src="img/activity-bg-4.jpg" alt="activity" class="activities-card__img">
 					</div>
 					<div class="activities-card__text">
@@ -568,7 +573,8 @@
 
 				<div class="footer__contact-form">
 					<h3 class="footer__title">Send us a message</h3>
-					<form action="send.php" method="POST" class="footer__form form">
+					<form action="send.php" method="POST" class="footer__form form" data-aos="zoom-in" data-aos-delay="100"
+						data-aos-duration="1000">
 
 						<div class="footer__input-group">
 							<input class="input footer__input" type="text" placeholder="Your Full Name*" name="name" required
@@ -673,6 +679,7 @@
 	<!--Параллакс эффект-->
 	<script src="js/jquery.validate.min.js"></script>
 	<script src="js/jquery.mask.min.js"></script>
+	<script src="js/aos.js"></script>
 	<script src="js/main.js"></script>
 </body>
 
