--- a/index.html
+++ b/index.html
@@ -176,7 +176,10 @@
 						<!-- /.booking__info -->
 					</div>
 					<!-- /.booking -->
-					<div id="map" class="map hotel-map"></div>
+					<div id="map" class="map hotel-map"><iframe class="map__img"
+							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248879.07505605282!2d100.8439191143121!3d12.924711050103266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310296059bd3779b%3A0x37191e723a1a258!2sHilton%20Pattaya!5e0!3m2!1sru!2sua!4v1596901897892!5m2!1sru!2sua"
+							width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+							tabindex="0"></iframe></div>
 					<!-- /.map -->
 				</div>
 			</div>
@@ -190,7 +193,7 @@
 	<section class="packages">
 		<div class="container">
 			<h2 class="packages__title">Other Packages</h2>
-			<div class="packages-cards" data-aos="fade-left" data-aos-delay="500" data-aos-duration="1000">
+			<div class="packages-cards" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
 
 				<div class="packages-cards__item package-card">
 					<div class="package-card__bg">
@@ -430,7 +433,7 @@
 			<h2 class="activities__title">Other Activities</h2>
 			<div class="activities-block">
 
-				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+				<div class="activities-block__item activities-card" data-aos="fade-down" data-aos-duration="1000"
 					data-aos-delay="100">
 					<div class="activities-card__bg"><img src="img/activity-bg-1.jpg" alt="activity" class="activities-card__img">
 					</div>
@@ -441,7 +444,7 @@
 					</div>
 				</div>
 
-				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+				<div class="activities-block__item activities-card" data-aos="fade-down" data-aos-duration="1000"
 					data-aos-delay="200">
 					<div class="activities-card__bg"><img src="img/activity-bg-2.jpg" alt="activity" class="activities-card__img">
 					</div>
@@ -452,7 +455,7 @@
 					</div>
 				</div>
 
-				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+				<div class="activities-block__item activities-card" data-aos="fade-down" data-aos-duration="1000"
 					data-aos-delay="300">
 					<div class="activities-card__bg"><img src="img/activity-bg-3.jpg" alt="activity" class="activities-card__img">
 					</div>
@@ -464,7 +467,7 @@
 					</div>
 				</div>
 
-				<div class="activities-block__item activities-card" data-aos="fade-down-left" data-aos-duration="3000"
+				<div class="activities-block__item activities-card" data-aos="fade-down" data-aos-duration="1000"
 					data-aos-delay="400">
 					<div class="activities-card__bg"><img src="img/activity-bg-4.jpg" alt="activity" class="activities-card__img">
 					</div>
@@ -553,19 +556,26 @@
 							</div>
 							9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United States
 						</li>
-						<li class="footer__item footer__item--mb-2">
+
+						<li class="footer__item footer__item--mb-2 footer-phones">
 							<div class="footer__icon-wrapper">
 								<img class="footer__icon" src="img/phone.svg" alt="icon: phone">
 							</div>
-							Tel (business hours) : 269 1500 <br>
-							Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00 am – 20:00 pm) <br>
-							Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00 pm)
+							<div class="footer-phones__text">
+								<a href="#" class="footer__link footer-phones__item">Tel (business hours) : 269 1500</a>
+								<a href="#" class="footer__link footer-phones__item">Tel (hotline) Monday - Saturday: 52-56-61-38 (08:00
+									am –
+									20:00 pm)</a>
+								<a href="#" class="footer__link footer-phones__item">Tel (hotline) Sunday: 52-56-61-38 (08:00 am – 14:00
+									pm)</a>
+							</div>
 						</li>
+
 						<li class="footer__item footer__item--mb-2">
 							<div class="footer__icon-wrapper">
 								<img class="footer__icon" src="img/mail.svg" alt="icon: mail">
 							</div>
-							cherly.lawson@example.com
+							<a class="footer__link" href="#">cherly.lawson@example.com</a>
 						</li>
 					</ul>
 				</div>
@@ -669,10 +679,6 @@
 
 	<script src="js/swiper-bundle.min.js"></script>
 	<!--Подключение слайдера-->
-	<script src="https://api-maps.yandex.ru/2.1/?apikey=9313937c-2bc8-480f-b9ac-7970f5ed1c87&lang=en_US">
-	</script>
-	<script src="js/map.js"></script>
-	<!--Подключение яндекс карты-->
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/parallax.min.js"></script>
 	<script src="js/parallax.js"></script>
